# subspace

./: .gitignore  download.py  download_data.py  readme.md  requirements.txt
FLoRA/: train.py
Fira/: README.md
Fira/fine_tuning/: finetune.py  ft_fira.sh  requirements.txt
LLaMA-Factory/: download.py  run.sh  unified_logger.py
LLaMA-Factory/config/: llama3_dora.yaml  llama3_galore.yaml  llama3_lora.yaml  llama3_pissa.yaml
LLaMA-Factory/eval_results/: result_LoRA_2026-01-04T10-02-51.236753.json
configs/llama_factory/: llama3_dora.yaml  llama3_galore.yaml  llama3_lora.yaml  llama3_lora_dora.yaml  llama3_lora_fira.yaml  llama3_lora_galore.yaml  llama3_lora_pissa.yaml  llama3_lora_stella.yaml  llama3_pissa.yaml
data/: dataset_info.json  download.py  shuffle_data.py
eval_results/: result_LoRA_Factory_2026-01-04T16-30-30.420540.json
scripts/: eval.py  loss_plot.py  master_run.sh  run_dora.sh  run_fira.sh  run_galore.sh  run_lora.sh  run_lora_dora.sh  run_lora_fira.sh  run_lora_galore.sh  run_lora_pissa.sh  run_lora_stella.sh  run_pissa.sh  run_stella.sh
stella/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
stella/experiments/commonsense/: .gitignore  README.md  environment.yml  run_stella.sh
stella/experiments/commonsense/tools/: evaluate_commonsense.py  finetune.py
stella/stella/: __init__.py
stella/stella/trainer/: __init__.py  stella_trainer.py
stella/stella/tuner/: __init__.py  config.py  layer.py  model.py  patch_peft.py  stiefel.py
stella/stella/utils/: extend_enum.py  patch_peft.py
utils/: unified_logger.py
(+3 files in other folders)
